<resources>
    <string name="app_name">BruxellesWifi</string>
    <string name="hintEmail">Email</string>
    <string name="loginBtn">Connexion</string>
    <string name="hintPwd">Password</string>
    <string name="login">Login</string>
    <string name="Aboutme">About</string>
    <string name="He2b">He2b</string>
    <string name="AboutText">This project for the MOBG5 course is an application that gives you all the positions of the free wifi available in Brussels,and also gives you the wifi available around you.</string>
    <string name="api_key">AIzaSyBjOG2fwFZQ0wb1cFiH7GpXX3GziTzGBmY</string>
    <string name="map">Map</string>
    <string name="wifi">wifi</string>
    <string name="espaceNomWifi">NomWifi</string>
    <string name="allwifi">All Wi-Fi</string>
    <string name="status">Status</string>
    <string name="operationnel">Operationnel</string>
    <string name="favoris">Favoris</string>
    <string name="detail">Detail</string>
    <string name="info">Information</string>
    <string name="local">Locate Wifi</string>
    <string name="visible">You have not yet added any Wi-Fi to your favorites!</string>
    <string name="auteur">Anas Ben Allal 53203</string>
    <string name="adresse">Adresse</string>


</resources>