<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/map3"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.mobg5_53203.screen.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_fragment_login_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_fragment_login_to_map3"
            app:destination="@id/map3" />

    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.mobg5_53203.screen.about.AboutFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_fragment_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/fragment_login" />
    </fragment>
    <fragment
        android:id="@+id/map3"
        android:name="com.example.mobg5_53203.screen.googlemap.MapFragment"
        android:label="@string/local"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_map3_to_fragment_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/fragment_login" />
        <action
            android:id="@+id/action_map3_to_allWifi"
            app:destination="@id/allWifi" />
    </fragment>
    <fragment
        android:id="@+id/allWifi"
        android:name="com.example.mobg5_53203.screen.recyclerview.AllWifi"
        android:label="@string/allwifi"
        tools:layout="@layout/fragment_all_wifi" >
        <action
            android:id="@+id/action_allWifi_to_map3"
            app:destination="@id/map3" />
        <action
            android:id="@+id/action_allWifi_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/allWifi" />
        <argument
            android:name="wifi"
            app:argType="com.example.mobg5_53203.screen.recyclerview.WifiModel"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.mobg5_53203.screen.recyclerview.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detaille" >
        <action
            android:id="@+id/action_detailFragment_to_allWifi"
            app:destination="@id/allWifi" />

        <argument
            android:name="wifi"
            app:argType="com.example.mobg5_53203.screen.recyclerview.WifiModel"
            app:nullable="true" />

    </fragment>
    <fragment
        android:id="@+id/favorisFragment"
        android:name="com.example.mobg5_53203.screen.recyclerview.FavorisFragment"
        android:label="@string/favoris"
        tools:layout="@layout/fragment_all_fav">
        <action
            android:id="@+id/action_fragment_all_fav2_to_map3"
            app:destination="@id/map3" />
    </fragment>

</navigation>