<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mobg5_53203.screen.recyclerview.DetailFragment"
    android:id="@+id/detailFrag" >
    <data>
        <variable
            name="detailFragment"
            type="com.example.mobg5_53203.screen.recyclerview.WifiModel" />
    </data>


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/tanAccent"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="128dp"
                android:layout_height="134dp"
                android:contentDescription="@string/wifi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:srcCompat="@drawable/ic_baseline_wifi_24"
                app:tint="@color/blue"
                />

            <TextView
                android:id="@+id/textViewDetail"
                android:layout_width="220dp"
                android:layout_height="112dp"
                android:text="@string/espaceNomWifi"
                android:textColor="#0B0505"
                android:textSize="19sp"
                android:textStyle="bold"
                app:detailNom="@{detailFragment.nomWifi}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.109" />

            <TextView
                android:id="@+id/description"
                android:layout_width="162dp"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textColor="#0B0505"
                android:textSize="19sp"
                android:textStyle="bold"

                app:detailDescription="@{detailFragment.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetail" />

            <TextView
                android:id="@+id/emplacement"
                android:layout_width="162dp"
                android:layout_height="72dp"
                android:layout_marginTop="4dp"
                android:text="@string/operationnel"
                android:textColor="#0B0505"
                android:textSize="19sp"
                android:textStyle="bold"
                app:detailEmplacement="@{detailFragment.nomLieu}"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/detailadresse"
                android:layout_width="244dp"
                android:layout_height="109dp"
                android:text="@string/adresse"
                android:textColor="#0B0505"
                android:textSize="19sp"
                android:textStyle="bold"
                app:detailAdresse="@{detailFragment.adresse}"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.532"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emplacement"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="115dp"
                android:layout_height="66dp"
                android:text="@string/favoris"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.868" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>

</layout>