<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.example.mobg5_53203.screen.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            app:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
            app:layout_constraintVertical_bias="0.145" />

        <AutoCompleteTextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325"
            />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hintPwd"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt"
            app:layout_constraintVertical_bias="0.104"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>